Actualización del backend y entidades nuevas